# anyopt-test

./: .gitignore  CMakeLists.txt  Makefile  full.art  main-premem.json
ctest/: CMakeLists.txt
ctest/full/: CMakeLists.txt  exports.art  full.art  output.ref
ctest/precompiled/: CMakeLists.txt  main-premem.json  main.json  test.json
ctest/test-bad/: CMakeLists.txt  test-bad.art
ctest/test-global-var/: CMakeLists.txt  import.art
old-prebuilds/: main.json  test.json
test-global-var/: test.c
test-global-var/artic/: Makefile  exports.art  import.art
